Add real time price change, time intervals for the chart and trading options